--- a/SynthesizerUI/Resources/Shared.xaml
+++ b/SynthesizerUI/Resources/Shared.xaml
@@ -3,9 +3,9 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 
-    <!-- Fill Brushes -->
+    <!-- Fill Brushes --><!--
 
-    <LinearGradientBrush x:Key="NormalBrush" StartPoint="0,0" EndPoint="0,1">
+    <LinearGradientBrush x:Key="SliderThumbBrush" StartPoint="0,0" EndPoint="0,1">
         <GradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#114411" Offset="0.0"/>
@@ -14,7 +14,7 @@
         </GradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <LinearGradientBrush x:Key="HorizontalNormalBrush" StartPoint="0,0" EndPoint="1,0">
+    <LinearGradientBrush x:Key="SliderHorizontalNormalBrush" StartPoint="0,0" EndPoint="1,0">
         <GradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#FFF" Offset="0.0"/>
@@ -23,7 +23,7 @@
         </GradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <LinearGradientBrush x:Key="LightBrush" StartPoint="0,0" EndPoint="0,1">
+    <LinearGradientBrush x:Key="SliderLightBrush" StartPoint="0,0" EndPoint="0,1">
         <GradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#11FF11" Offset="0.0"/>
@@ -32,7 +32,7 @@
         </GradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <LinearGradientBrush x:Key="HorizontalLightBrush" StartPoint="0,0" EndPoint="1,0">
+    <LinearGradientBrush x:Key="SliderHorizontalLightBrush" StartPoint="0,0" EndPoint="1,0">
         <GradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#11CC11" Offset="0.0"/>
@@ -41,14 +41,14 @@
         </GradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <LinearGradientBrush x:Key="DarkBrush" StartPoint="0,0" EndPoint="0,1">
+    <LinearGradientBrush x:Key="SliderDarkBrush" StartPoint="0,0" EndPoint="0,1">
         <GradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#11FF11" Offset="0.0"/>
                 <GradientStop Color="#11AA11" Offset="1.0"/>
             </GradientStopCollection>
         </GradientBrush.GradientStops>
-    </LinearGradientBrush>
+    </LinearGradientBrush>-->
 
     <LinearGradientBrush x:Key="PressedBrush" StartPoint="0,0" EndPoint="0,1">
         <GradientBrush.GradientStops>
@@ -63,15 +63,15 @@
 
     <SolidColorBrush x:Key="DisabledForegroundBrush" Color="#888" />
 
-    <SolidColorBrush x:Key="DisabledBackgroundBrush" Color="#EEE" />
+    <!--<SolidColorBrush x:Key="SliderDisabledBackgroundBrush" Color="#EEE" />-->
 
     <SolidColorBrush x:Key="WindowBackgroundBrush" Color="#FFF" />
 
     <SolidColorBrush x:Key="SelectedBackgroundBrush" Color="#DDD" />
 
-    <!-- Border Brushes -->
+    <!-- Border Brushes --><!--
 
-    <LinearGradientBrush x:Key="NormalBorderBrush" StartPoint="0,0" EndPoint="0,1">
+    <LinearGradientBrush x:Key="SliderBorderBrush" StartPoint="0,0" EndPoint="0,1">
         <GradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#11CC11" Offset="0.0"/>
@@ -80,14 +80,14 @@
         </GradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <LinearGradientBrush x:Key="HorizontalNormalBorderBrush" StartPoint="0,0" EndPoint="1,0">
+    <LinearGradientBrush x:Key="SliderHorizontalNormalBorderBrush" StartPoint="0,0" EndPoint="1,0">
         <GradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#113311" Offset="0.0"/>
                 <GradientStop Color="#112211" Offset="1.0"/>
             </GradientStopCollection>
         </GradientBrush.GradientStops>
-    </LinearGradientBrush>
+    </LinearGradientBrush>-->
 
     <LinearGradientBrush x:Key="DefaultedBorderBrush" StartPoint="0,0" EndPoint="0,1">
         <GradientBrush.GradientStops>
@@ -113,8 +113,8 @@
 
     <SolidColorBrush x:Key="LightBorderBrush" Color="#AAA" />
 
-    <!-- Miscellaneous Brushes -->
-    <SolidColorBrush x:Key="GlyphBrush" Color="#999911" />
+    <!-- Miscellaneous Brushes --><!--
+    <SolidColorBrush x:Key="GlyphBrush" Color="#999911" />-->
 
     <SolidColorBrush x:Key="LightColorBrush" Color="#DDD" />
 
