Added a bunch of DI stuff as well as a Dialog service

--- a/SynthesizerUI/App.xaml
+++ b/SynthesizerUI/App.xaml
@@ -15,8 +15,7 @@
                 <ResourceDictionary Source="/Resources/Slider.xaml" />
 
                 <ResourceDictionary>
-
-
+                    <local:ViewModelLocator x:Key="ViewModelLocator" />
                 </ResourceDictionary>
 
             </ResourceDictionary.MergedDictionaries>
