--- a/SynthesizerUI/Controls/PianoKeyboardControl.xaml
+++ b/SynthesizerUI/Controls/PianoKeyboardControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SynthesizerUI.PianoKeyboardControl"
+﻿<UserControl x:Class="SynthesizerUI.Controls.PianoKeyboardControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
